# cpp-scaffold

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  APKBUILD  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Doxyfile  PKGBUILD  README.md  flake.nix  justfile  manifest.scm  package.scm
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/: README.md  dependabot.yml
.github/workflows/: README.md  ci.yml  guix.yml
ci/: README.md
ci/alpine/: Dockerfile  README.md
ci/arch/: Dockerfile  README.md
ci/fedora/: Dockerfile  README.md
ci/install-test/: CMakeLists.txt  README.md  main.cpp
ci/trixie/: Dockerfile  README.md
cmake/: Ccache.cmake  Coverage.cmake  Hardening.cmake  Install.cmake  Packaging.cmake  README.md  Sanitizers.cmake  ScaffoldBinary.cmake  ScaffoldLibrary.cmake  SortTarballs.cmake  Version.cmake  scaffold-config.cmake.in  version.hpp.in
libs/: README.md
libs/convert/: CMakeLists.txt  README.md
libs/convert/include/convert/: convert.hpp
libs/convert/src/: convert.cpp
libs/convert/tests/: convert_test.cpp
libs/core/: CMakeLists.txt  README.md
libs/core/include/core/: core.hpp  table.hpp
libs/core/src/: core.cpp
libs/core/tests/: core_test.cpp
libs/csv/: CMakeLists.txt  README.md
libs/csv/include/csv/: csv.hpp
libs/csv/src/: csv.cpp
libs/csv/tests/: csv_test.cpp
libs/json/: CMakeLists.txt  README.md
libs/json/include/json/: json.hpp
libs/json/src/: json.cpp
libs/json/tests/: json_test.cpp
libs/test_support/: CMakeLists.txt  README.md
libs/test_support/include/test_support/: expect.hpp  subprocess.hpp
libs/test_support/tests/: test_support_test.cpp
scripts/: README.md  pre-commit  verify-reproducibility.sh
